<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textViewOrdinamenti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:text="@string/ordinamenti"
            android:textColor="@android:color/black"
            android:textSize="10pt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewOrdinamenti2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/filtri"
            android:textColor="@android:color/black"
            android:textSize="10pt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view2" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewOrdinamenti">

            <RadioButton
                android:id="@+id/radioButtonPiuRecente"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:checked="true"
                android:text="@string/ordina_per_pi_recente" />

            <RadioButton
                android:id="@+id/radioButtonMenoRecente"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="@string/ordina_per_meno_recente" />

            <RadioButton
                android:id="@+id/radioButtonPiuStelle"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="@string/ordina_per_numero_di_stelle_crescente" />

            <RadioButton
                android:id="@+id/radioButtonMenoStelle"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="@string/ordina_per_numero_di_stelle_decrescente" />
        </RadioGroup>

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="#c0c0c0"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <CheckBox
            android:id="@+id/checkBoxUnaStella"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:checked="true"
            android:text="@string/una_stella"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewOrdinamenti2" />

        <CheckBox
            android:id="@+id/checkBoxDueStelle"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginEnd="24dp"
            android:checked="true"
            android:text="@string/due_stelle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/checkBoxUnaStella"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxUnaStella" />

        <CheckBox
            android:id="@+id/checkBoxTreStelle"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginEnd="24dp"
            android:checked="true"
            android:text="@string/tre_stelle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/checkBoxUnaStella"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxDueStelle" />

        <CheckBox
            android:id="@+id/checkBoxQuattroStelle"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginEnd="24dp"
            android:checked="true"
            android:text="@string/quattro_stelle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/checkBoxTreStelle"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxTreStelle" />

        <CheckBox
            android:id="@+id/checkBoxCinqueStelle"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginEnd="24dp"
            android:checked="true"
            android:text="@string/cinque_stelle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/checkBoxQuattroStelle"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxQuattroStelle" />

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="#c0c0c0"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxCinqueStelle" />

        <Button
            android:id="@+id/buttonConfermaFiltri"
            style="@android:style/Widget.Material.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/bottone_conferma"
            app:layout_constraintEnd_toEndOf="@+id/checkBoxCinqueStelle"
            app:layout_constraintTop_toBottomOf="@+id/view3" />

        <Button
            android:id="@+id/buttonAnnullaFiltri"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/bottone_annulla"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view3" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="top" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>