<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="ingsw.mobile.MainActivity">

        <View
            android:id="@+id/view7"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="#c0c0c0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonAccedi" />

        <View
            android:id="@+id/view8"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="16dp"
            android:background="#c0c0c0"
            app:layout_constraintBottom_toTopOf="@+id/textViewLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textViewLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/effettua_il_login"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/editTextUsername"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/nome_utente"
            android:inputType="textFilter"
            android:maxLength="16"
            app:layout_constraintBottom_toTopOf="@+id/editTextPasswordLogin"
            app:layout_constraintEnd_toEndOf="@+id/textViewLogin"
            app:layout_constraintStart_toStartOf="@+id/textViewLogin" />

        <EditText
            android:id="@+id/editTextPasswordLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/hint_campo_password"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/editTextUsername"
            app:layout_constraintStart_toStartOf="@+id/editTextUsername"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonAccedi"
            style="@android:style/Widget.Material.Button.Colored"
            android:layout_width="198dp"
            android:layout_height="46dp"
            android:layout_marginTop="9dp"
            android:text="@string/accedi"
            app:layout_constraintEnd_toEndOf="@+id/editTextPasswordLogin"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/editTextPasswordLogin"
            app:layout_constraintTop_toBottomOf="@+id/editTextPasswordLogin" />

        <TextView
            android:id="@+id/textViewRegistrati"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/registrati"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/text_view_accedi_visitatore"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/accedi_visitatore"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.956"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/non_sei_registrato"
            android:textColor="@android:color/black"
            android:textSize="16sp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.054"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view7" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Non_vuoi_registrarti"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.947"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="6dp"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/cardView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="46dp"
            android:layout_marginEnd="24dp"
            app:cardCornerRadius="50dp"
            app:layout_constraintBottom_toTopOf="@+id/view8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/logo_app"
                app:srcCompat="@mipmap/ic_launcher_round" />
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>